--- a/public/gcintranet/samples/exitscript-en.html
+++ b/public/gcintranet/samples/exitscript-en.html
@@ -54,7 +54,7 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Leaving a secure site</h1>
-            <p>In certain scenarios (ex: secure sites) we want to notify the user that the link or action they have just performed will exit the current secured site/session and it is possible that data could be lost. The message allows the user to cancel the redirect or continue with the redirect.</p>
+            <p>In certain scenarios (ex: secure sites) we want to notify the user that the link or action they have just performed will exit the current secured site/session and it is possible that data could be lost. The message allows the user to cancel or continue to the external site.</p>
 			<p>When enabled, this feature will:</p>
             <ul>
                 <li>display the message to the user in the form of a modal window</li>
@@ -66,7 +66,8 @@
 			<p>The exit script is added in the <code>refFooter</code> section of the page, via the <code class="wb-prettify">exitSecureSite</code> object. This object has the following properties that can be assigned a value:</p>
             <ul>
                 <li><code class="wb-prettify">exitScript</code>: Set to true to enable the Exit Script functionality</li>
-                <li><code class="wb-prettify">displayModal</code>: Set to true to show the modal dialog warning the user is about to leave the secure site. Otherwise, continue directly to the exit Url.</li>
+                <li><code class="wb-prettify">displayModal</code>: Set to true to show the modal dialog warning the user is about to leave the secure site.</li>
+                <li><code class="wb-prettify">exitURL</code>: Set an url that you would like the user to redirect to. The user will NOT see a modal dialog warning the user is about to leave the secure site</li>
                 <li><code class="wb-prettify">msgBoxHeader</code>: Customize the title of the modal dialog otherwise a default title will show</li>
                 <li><code class="wb-prettify">exitMsg</code>: Customize the message of the modal dialog</li>
                 <li><code class="wb-prettify">cancelMsg</code>: Customize the label on the cancel button</li>
@@ -83,7 +84,6 @@ document.write(wet.builder.refFooter({
     "exitSecureSite" : {
         exitScript: true,
         displayModal: true,
-        exitURL: "exiturl-en.html",
         exitMsg: "This is a custom message. You are about to leave a secure site, do you wish to continue?",
         cancelMsg: "Nope",
         yesMsg : "Sure",
@@ -95,11 +95,13 @@ document.write(wet.builder.refFooter({
             </pre>
             <section>
 				<h2>Example</h2>
+				<p>The following examples are links that show the modal dialog.</p>
+				<p>For examples with redirect, please visit <a href="exitscript-redirect-en.html">here.</a></p>
 				<ul class="lst-spcd">
 					<li>
 						This link <a href="https://www.google.ca/">https://www.google.ca/</a>
 						has a host name (google.ca) different from yours.
-						You'll be redirect to <code>exiturl-en.html</code> page because the <code>exitURL</code> parameter contains the value <code>exiturl-en.html</code>.
+						You will see a warning modal dialog. 
 					</li>
 					<li>
 						This link <a target="_blank" href="https://www.w3schools.com">https://www.w3schools.com</a>
@@ -108,17 +110,17 @@ document.write(wet.builder.refFooter({
 					</li>
 					<li>
 						This link <a href="breadcrumbs-en.html">breadcrumbs-en.html</a> has the same host name as yours.
-						You won't be redirect to <code>exiturl-en.html</code>.
+						You won't see a warning modal dialog.
 					</li>
 					<li>
 						This link <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a>
 						has his host name (developer.mozilla.org) in the exception list <code>exitDomains</code>.
-						You won't be redirect to <code>exiturl-en.html</code>.
+						You won't see a warning modal dialog.
 					</li>
 					<li>
 						This link <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a>
 						has the attribute <code>cdts-exitscript-disabled</code> exempting it from exit script.
-						You won't be redirect to <code>exiturl-en.html</code>.
+						You won't see a warning modal dialog.
 					</li>
 				</ul>
 			</section>
@@ -131,7 +133,7 @@ document.write(wet.builder.refFooter({
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					"cdnEnv": "prod",
-					"dateModified": "2021-05-17"
+					"dateModified": "2023-11-09",
 				});
 			</script>
 		</main>
@@ -152,7 +154,7 @@ document.write(wet.builder.refFooter({
 				"exitSecureSite" : {
 				    exitScript: true,
 				    displayModal: true,
-				    exitURL: "exiturl-en.html",
+				    //exitURL: "exiturl-en.html",
 				    exitMsg: "This is a custom message. You are about to leave a secure site, do you wish to continue?",
 				    cancelMsg: "Nope",
 				    yesMsg: "Sure",
