--- a/public/gcintranet/samples/exitscript-redirect-fr.html
+++ b/public/gcintranet/samples/exitscript-redirect-fr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
@@ -14,13 +14,15 @@
 			Remarque : un chemin relatif est utilisé dans cet exemple. Afin d'intégrer les balises de script dans votre code, utilisez le chemin absolu suivant (selon le choix du domaine).
 			Ce chemin peut être utilisé pour les trois noms de fichiers suivants : soyutils.js, wet-en.js et wet-fr.js.
 
-			cdts.service.canada.ca : https://cdts.service.canada.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
-			templates.service.gc.ca : https://templates.service.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
+			canada.ca : https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/[file name]
+			cdts.service.canada.ca : https://cdts.service.canada.ca/app/cls/WET/gcweb/v4_0_44/cdts/compiled/[file name]
+			templates.service.gc.ca : https://templates.service.gc.ca/app/cls/WET/gcweb/v4_0_44/cdts/compiled/[file name]
 
 			Pour pointer vers la version d'exécution :
 
-			cdts.service.canada.ca : https://cdts.service.canada.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
-			templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
+			canada.ca : https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/[file name]
+			cdts.service.canada.ca : https://cdts.service.canada.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
+			templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
 		-->
 		<script src="../compiled/soyutils.js"></script>
 		<script src="../compiled/wet-fr.js"></script>
@@ -31,14 +33,14 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "prod"
+				"cdnEnv": "esdcprod"
 			}));
 		</script>
 	</head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
-			<!-- top-fr.html -->
+			<!-- top-en.html -->
 		</div>
 		<!-- Write closure template -->
 		<script>
@@ -46,10 +48,10 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "en",
-					"href": "exitscript-en.html",
+					"href": "exitscript-redirect-en.html",
 					"text": "English"
 				}],
-				"cdnEnv": "prod"
+				"cdnEnv": "esdcprod"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
@@ -66,7 +68,7 @@
 			<p>La configuration est ajouté dans la section <code>refFooter</code> de la page. Cet objet possède les propriétés suivantes auxquelles une valeur peut être affectée :</p>
             <ul>
                 <li><code class="wb-prettify">exitScript</code>: Défini <code>true</code> pour activer la fonctionnalité Exit Script</li>
-                <li><code class="wb-prettify">displayModal</code>: Défini sur <code>true</code> pour afficher la boîte de dialogue modale avertissant que l'utilisateur est sur le point de quitter le site sécurisé.</li>
+                <li><code class="wb-prettify">displayModal</code>: Défini <code>true</code> pour afficher la boîte de dialogue modale avertissant que l'utilisateur est sur le point de quitter le site sécurisé.</li>
                 <li><code class="wb-prettify">exitURL</code>: Définissez une URL vers laquelle vous souhaitez que l'utilisateur soit redirigé. L'utilisateur ne verra PAS de boîte de dialogue modale avertissant que l'utilisateur est sur le point de quitter le site sécurisé</li>
                 <li><code class="wb-prettify">msgBoxHeader</code>: Personnalisez le titre de la boîte de dialogue modale sinon un titre par défaut s'affichera</li>
                 <li><code class="wb-prettify">exitMsg</code>: Personnaliser le message de la boîte de dialogue modale</li>
@@ -74,7 +76,7 @@
                 <li><code class="wb-prettify">yesMsg</code>: Personnalisez l'étiquette sur le bouton Oui</li>
                 <li><code class="wb-prettify">exitDomains</code>: Une liste de domaines exemptés pour lesquels le script ne déclenchera pas</li>
                 <li><code class="wb-prettify">targetWarning</code>: Un avertissement à afficher à l'utilisateur que le lien s'ouvrira dans une nouvelle fenêtre. Cela ajoutera au message</li>
-                <li><code class="wb-prettify">displayModalForNewWindow</code>: S'il est défini sur <code>true</code>, n'affichera pas modal pour les liens qui s'ouvrent dans une nouvelle fenêtre</li>
+                <li><code class="wb-prettify">displayModalForNewWindow</code>: S'il est défini <code>true</code>, n'affichera pas modal pour les liens qui s'ouvrent dans une nouvelle fenêtre</li>
 
             </ul>
             <p>L'attribut <code class="wb-prettify">cdts-exitscript-disabled</code> peut être ajouté à des liens individuels pour les exempter de script.</p>
@@ -83,7 +85,7 @@ document.write(wet.builder.refFooter({
 ...
     exitSecureSite : {
         exitScript: true,
-        displayModal: true,
+        exitURL: "exiturl-en.html",
         exitMsg: "Ceci est un message personnalisé. Vous êtes sur le point de quitter un site sécurisé, désirez-vous continuer?",
         cancelMsg: "Arrêter",
         yesMsg : "Continuer",
@@ -95,57 +97,56 @@ document.write(wet.builder.refFooter({
             </pre>
             <section>
 				<h2>Exemple</h2>
-				<p>Les exemples suivants sont des liens qui affichent la boîte de dialogue modale.</p>
-				<p>Pour des exemples de redirection, veuillez visiter <a href="exitscript-redirect-fr.html">ici.</a></p>
+				<p>Les exemples suivants sont des liens qui redirigent.</p>				
+                <p>Pour des exemples avec une boîte de dialogue modale, veuillez visiter <a href="exitscript-fr.html">ici.</a></p>
 				<ul class="lst-spcd">
 					<li>
 						Ce lien <a href="https://www.google.ca/">https://www.google.ca/</a>
 						a un nom de domaine (google.ca) différent du vôtre.
-						Vous verrez une boîte de dialogue modale d’avertissement.
+						Vous serez redirigé vers la page <code>exiturl-en.html</code> car le paramètre <code>exitURL</code> contient la valeur <code>exiturl-en.html</code>.
 					</li>
 					<li>
-						Ce lien <a target="_blank" href="https://www.w3schools.com">https://www.w3schools.com</a>
-						s'ouvrira dans une autre fenêtre. Avec le paramètre <code>targetWarning</code>, vous pouvez définir un message qui avertira les utilisateurs que le lien s'ouvrira dans une autre fenêtre.
-						Ce message ajoutera le message d'affichage existant.
+						Ce lien <a target="_blank" href="https://www.w3schools.com">https://www.w3schools.com</a> s'ouvrira dans une autre fenêtre. 
+                        Vous serez redirigé vers la page <code>exiturl-fr.html</code> dans une nouvelle fenêtre.					
 					</li>
 					<li>
 						Ce lien <a href="breadcrumbs-en.html">breadcrumbs-en.html</a> a le même nom de domaine que le vôtre.
-						Vous ne verrez pas de boîte de dialogue modale d'avertissement.
+						Vous ne serez pas redirigé vers <code>exiturl-fr.html</code>.
 					</li>
 					<li>
 						Ce lien <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a>
 						a son nom d'hôte (developer.mozilla.org) dans la liste des exceptions <code>exitDomains</code>.
-						Vous ne verrez pas de boîte de dialogue modale d'avertissement.
+						Vous ne serez pas redirigé vers <code>exiturl-fr.html</code>.
 					</li>
 					<li>
 						Ce lien <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a>
 						a l'attribut <code>cdts-exitscript-disabled</code> l'exemptant de script.
-						Vous ne verrez pas de boîte de dialogue modale d'avertissement.
+						Vous ne serez pas redirigé vers <code>exiturl-fr.html</code>.
 					</li>
 				</ul>
 			</section>
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
-				<!-- preFooter-fr.html -->
+				<!-- preFooter-en.html -->
 			</div>
 			<!-- Write closure template -->
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					"dateModified": "2023-11-09",
-					"cdnEnv": "prod"
+					"cdnEnv": "esdcprod"
 				});
 			</script>
 		</main>
 		<div id="def-footer">
 			<!-- Write closure fall-back static file -->
-			<!-- footer-fr.html -->
+			<!-- footer-en.html -->
 		</div>
 		<!-- Write closure template -->
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "prod"
+				"cdnEnv": "esdcprod"
 			});
 		</script>
 		<!-- Write closure template -->
@@ -153,7 +154,7 @@ document.write(wet.builder.refFooter({
 			document.write(wet.builder.refFooter({
 				"exitSecureSite" : {
 				    exitScript: true,
-				    displayModal: true,
+				    exitURL: "exiturl-fr.html",
 				    exitMsg: "Ceci est un message personnalisé. Vous êtes sur le point de quitter un site sécurisé, désirez-vous continuer?",
 				    cancelMsg: "Arrêter",
 				    yesMsg : "Continuer",
@@ -163,7 +164,7 @@ document.write(wet.builder.refFooter({
 				//"jqueryEnv" : "external",
 				//"webAnalytics" :false,
 				//"isApplication":true,
-				"cdnEnv": "prod"
+				"cdnEnv": "esdcprod"
 			}));
 		</script>
 	</body>
