--- a/public/gcintranet/samples/exiturl-fr.html
+++ b/public/gcintranet/samples/exiturl-fr.html
@@ -57,7 +57,7 @@
 			<p>Vous venez d'être redirigé ici à l'aide de notre script de sortie.</p>
 			<p>Voici la destination originale :</p>
 			<p><span class="wb-exitscript wb-exitscript-urlparam"></span></p>
-			<p>Pour récupérer l'URL de la destination, ajoutez simplement le span suivant et il sera remplacé par le lien de destination.</p>
+			<p>Pour récupérer l'URL de la destination, ajoutez simplement le <code>span</code> suivant et il sera remplacé par le lien de destination.</p>
 			<pre>
 &lt;p&gt;&lt;span class="wb-exitscript wb-exitscript-urlparam"&gt;&lt;/span&gt;&lt;/p&gt;
 			</pre>
