Updating sample pages

--- a/public/gcweb/samples/exitscript-fr.html
+++ b/public/gcweb/samples/exitscript-fr.html
@@ -69,7 +69,7 @@
             <ul>
                 <li><code class="wb-prettify">exitScript</code>: Défini <code>true</code> pour activer la fonctionnalité Exit Script</li>
                 <li><code class="wb-prettify">displayModal</code>: Défini <code>true</code> pour afficher la boîte de dialogue modale avertissant que l'utilisateur est sur le point de quitter le site sécurisé.</li>
-                <li><code class="wb-prettify">exitURL</code>: Définissez une URL vers laquelle vous souhaitez que l'utilisateur soit redirigé. L'utilisateur ne verra PAS de boîte de dialogue modale avertissant que l'utilisateur est sur le point de quitter le site sécurisé</li>
+                <li><code class="wb-prettify">exitURL</code>: Définissez une URL vers laquelle vous souhaitez que l'utilisateur soit redirigé. L'utilisateur ne verra PAS de boîte de dialogue modale avertissant que l'utilisateur est sur le point de quitter le site sécurisé. Ce paramètre sera ignoré si <code>displayModal</code> est défini sur <code>true</code></li>
                 <li><code class="wb-prettify">msgBoxHeader</code>: Personnalisez le titre de la boîte de dialogue modale sinon un titre par défaut s'affichera</li>
                 <li><code class="wb-prettify">exitMsg</code>: Personnaliser le message de la boîte de dialogue modale</li>
                 <li><code class="wb-prettify">cancelMsg</code>: Personnalisez l'étiquette sur le bouton d'annulation</li>
