--- a/public/gcweb/samples/exitscript-en.html
+++ b/public/gcweb/samples/exitscript-en.html
@@ -69,7 +69,7 @@
             <ul>
                 <li><code class="wb-prettify">exitScript</code>: Set to true to enable the Exit Script functionality</li>
                 <li><code class="wb-prettify">displayModal</code>: Set to true to show the modal dialog warning the user is about to leave the secure site.</li>
-                <li><code class="wb-prettify">exitURL</code>: Set an url that you would like the user to redirect to. The user will NOT see a modal dialog warning the user is about to leave the secure site</li>
+                <li><code class="wb-prettify">exitURL</code>: Set an url that you would like the user to redirect to. The user will NOT see a modal dialog warning the user is about to leave the secure site. This parameter will be ignored if <code>displayModal</code> is set to true.</li>
                 <li><code class="wb-prettify">msgBoxHeader</code>: Customize the title of the modal dialog otherwise a default title will show</li>
                 <li><code class="wb-prettify">exitMsg</code>: Customize the message of the modal dialog</li>
                 <li><code class="wb-prettify">cancelMsg</code>: Customize the label on the cancel button</li>
