Fixing sample pages

--- a/public/gcintranet/samples/exitscript-redirect-en.html
+++ b/public/gcintranet/samples/exitscript-redirect-en.html
@@ -86,6 +86,7 @@ document.write(wet.builder.refFooter({
     "exitSecureSite" : {
         exitScript: true,
         exitURL: "exiturl-en.html",
+        exitDomains : "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
     }
 ...
 }));
@@ -151,6 +152,7 @@ document.write(wet.builder.refFooter({
 				"exitSecureSite" : {
 				    exitScript: true,
 				    exitURL: "exiturl-en.html",
+				    exitDomains : "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
 				},
 				//"jqueryEnv" : "external",
 				//"webAnalytics" :false,
