--- a/public/gcintranet/samples/exitscript-redirect-fr.html
+++ b/public/gcintranet/samples/exitscript-redirect-fr.html
@@ -86,6 +86,7 @@ document.write(wet.builder.refFooter({
     exitSecureSite : {
         exitScript: true,
         exitURL: "exiturl-fr.html",
+        exitDomains : "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
     },
 ...
 }));
@@ -150,6 +151,7 @@ document.write(wet.builder.refFooter({
 				"exitSecureSite" : {
 				    exitScript: true,
 				    exitURL: "exiturl-fr.html",
+				    exitDomains : "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
 				},
 				//"jqueryEnv" : "external",
 				//"webAnalytics" :false,
