Fixing french characters

--- a/public/global/esdcfooter-fra.html
+++ b/public/global/esdcfooter-fra.html
@@ -1,10 +1,10 @@
 <html>
 <!-- Le contenu de ce fichier est extrait de https://esdc.prv/_conf/assets/fr/footer/esdcfooter-fra.html -->
 <head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body><h2 class="wb-inv">Ã€ propos de ce site</h2>
+<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body><h2 class="wb-inv">À propos de ce site</h2>
 <div class="row">
   <section class="col-sm-3">
-    <h3>Ã€ propos</h3>
+    <h3>À propos</h3>
     <ul class="list-unstyled">
       <li><a href="https://edsc.prv/fr/aide.shtml">Aide et avis importants</a></li>
       <li><a href="https://edsc.prv/fr/intersection/index.shtml">Intersection</a></li>
@@ -15,22 +15,22 @@
      <section class="col-sm-3">
     <h3>Contact</h3>
     <ul class="list-unstyled">
-      <li><a href="https://gcdirectory-gcannuaire.ssc-spc.gc.ca/fr/GCA/?pgid=009">EmployÃ©s du gouvernement du Canada</a></li>
-      <li><a href="https://edsc.prv/fr/coordonnees/equipe-publication.shtml">Ã‰quipes d'Ã©ditions Intranet</a></li>
+      <li><a href="https://gcdirectory-gcannuaire.ssc-spc.gc.ca/fr/GCA/?pgid=009">Employés du gouvernement du Canada</a></li>
+      <li><a href="https://edsc.prv/fr/coordonnees/equipe-publication.shtml">Équipes d'éditions Intranet</a></li>
     </ul>
   </section>
   <section class="col-sm-3">
-    <h3>CommunautÃ©s</h3>
+    <h3>Communautés</h3>
     <ul class="list-unstyled">
       <li><a href="http://blogs-blogues.prv/SM-DM/?lang=fr">Blogue des SM</a></li>
       <li><a href="https://edsc.prv/fr/restez_branche/manuel.shtml">Guide sur l'utilisation du Web</a></li>
-      <li><a href="https://edsc.prv/fr/restez_branche/index.shtml">Restez branchÃ©</a></li>
+      <li><a href="https://edsc.prv/fr/restez_branche/index.shtml">Restez branché</a></li>
     </ul>
   </section>
   <div class="col-sm-3 col-lg-3 brdr-lft">
     <section>
-      <h3>RÃ©troaction</h3>
-      <p><a href="https://edsc.prv/fr/retroaction/index.shtml"><img src="esdcfooter-fra_files/feedback.png" alt="RÃ©troaction sur ce site Web"></a></p>
+      <h3>Rétroaction</h3>
+      <p><a href="https://edsc.prv/fr/retroaction/index.shtml"><img src="esdcfooter-fra_files/feedback.png" alt="Rétroaction sur ce site Web"></a></p>
     </section>
   </div>
 </div></body></html>
